--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,10 +18,15 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
+  background: linear-gradient(to bottom,
       transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+      rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
+}
+
+.shadow {
+  box-shadow: 2px 5px 5 2 rgba(255, 255, 255, 0.4);
+}
+
+.linear {
+  background: linear-gradient(#C7B6C3, #fff);
 }
